# my_list

./: CMakeLists.txt  README.md
headers/: my_list.h
sources/: delete.c  init.c  pop.c  push.c  show.c
test/: CMakeLists.txt  pop_test.cpp  push_test.cpp
